--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     /> -->
-    <!-- <link rel="stylesheet" href="./estilos/style.css" /> -->
+    <link rel="stylesheet" href="./estilos/style.css" />
   </head>
   <body>
     <header>
-      <nav id="cabeza">
-        <picture>
+      <nav class="nabvar container">
+        <!-- usamos la terminologia BEM,block element modifier, a los hijos le damos el nombre del padre modificado -->
+        <picture class="nabvar__logo">
           <a href="./index.html">
             <img
               src="./img/multimedia/branding/logo_light_horizontal.svg"
@@ -23,12 +24,29 @@
             />
           </a>
         </picture>
-        <ul>
-          <li><a href="./pages/shop.html">SHOP</a></li>
-          <li><a href="./pages/contacto.html">CONTACTO</a></li>
-          <li><a href="./pages/login.html">LOGIN</a></li>
-          <li>
-            <a href="./pages/carrito.html"
+        <ul class="nabvar__menu">
+          <li class="nabvar__item">
+            <a class="nabvar__link" href="./pages/shop.html">SHOP</a>
+          </li>
+          <ul class="submenu">
+            <li class="submenu__item">
+              <a class="submenu__link">FUNKOS</a>
+            </li>
+            <li class="submenu__item">
+              <a class="submenu__link">REMERAS</a>
+            </li>
+            <li class="submenu__item">
+              <a class="submenu__link" href="">LLAVEROS</a>
+            </li>
+          </ul>
+          <li class="nabvar__item">
+            <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
+          </li>
+          <li class="nabvar__item">
+            <a class="nabvar__link" href="./pages/login.html">LOGIN</a>
+          </li>
+          <li class="nabvar__item">
+            <a class="nabvar__cart" href="./pages/carrito.html"
               ><img
                 src="./img/multimedia/icons/cart-icon.svg"
                 alt="logo del carrito"
@@ -38,54 +56,55 @@
       </nav>
     </header>
 
-    <main>
-      <section>
-        <article>
-          <h3>Nuevos Ingresos</h3>
-          <p>Descubri el proximo Funko Pop de tu coleccion</p>
-          <a href="./pages/shop.html">SHOP</a>
-          <!-- con css agregamos la imagen de fondo -->
-        </article>
-      </section>
-
-      <section>
-        <article>
-          <h3>STARS WARS & THE MANDOLARIAN</h3>
-          <p>
+    <section class="hero">
+      <article class="hero__content container">
+        <h3 class="hero__title">Nuevos Ingresos</h3>
+        <p class="hero__text">Descubri el proximo Funko Pop de tu coleccion</p>
+        <a class="hero__link" href="./pages/shop.html">SHOP</a>
+        <!-- con css agregamos la imagen de fondo -->
+      </article>
+    </section>
+    <main class="main-container">
+      <section class="collection container">
+        <article class="collection__content">
+          <h3 class="collection__title">STARS WARS & THE MANDOLARIAN</h3>
+          <p class="collection__text">
             Disfruta de una saga que sigue agregando personajes a tu coleccion
           </p>
-          <a href="./pages/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="./pages/shop.html">VER COLECCION</a>
         </article>
-        <picture>
+        <picture class="collection__cover">
           <img
             src="./img/multimedia/star-wars/baby-yoda-1.webp"
             alt="Figura coleccionable de la serie The Mandolarian"
           />
         </picture>
       </section>
-      <section>
-        <article>
-          <h3>POKEMON INDIGO</h3>
-          <p>
+      <section class="collection container">
+        <article class="collection__content">
+          <h3 class="collection__title">POKEMON INDIGO</h3>
+          <p class="collection__text">
             Atrapa a todos los que puedas y disfruta de una coleccion llena de
             amigos
           </p>
-          <a href="./pages/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="./pages/shop.html">VER COLECCION</a>
         </article>
-        <picture>
+        <picture class="collection__cover">
           <img
             src="./img/multimedia/pokemon/vulpix-1.webp"
             alt="Figura coleccionable de la serie Pokemon"
           />
         </picture>
       </section>
-      <section>
-        <article>
-          <h3>HARRY POTTER</h3>
-          <p>Revive los recuerdos de una saga llena de magia y encanto</p>
-          <a href="./pages/shop.html">VER COLECCION</a>
+      <section class="coleccion container">
+        <article class="collection__content">
+          <h3 class="collection__title">HARRY POTTER</h3>
+          <p class="collection__text">
+            Revive los recuerdos de una saga llena de magia y encanto
+          </p>
+          <a class="collection__link" href="./pages/shop.html">VER COLECCION</a>
         </article>
-        <picture>
+        <picture class="collection__cover">
           <img
             src="./img/multimedia/harry-potter/snape-patronus-1.webp"
             alt="Figura coleccionable de la pelicula Harry Potter"
@@ -96,7 +115,8 @@
         <h2>ULTIMOS LANZAMIENTOS</h2>
         <li>
           <article>
-            <a href="">
+            <a href="./pages/shop.html"
+              >NUEVO
               <picture>
                 <img
                   src="./img/multimedia/star-wars/trooper-1.webp"
@@ -114,7 +134,8 @@
         </li>
         <li>
           <article>
-            <a href="">
+            <a href="./pages/shop.html"
+              >NUEVO
               <picture>
                 <img
                   src="./img/multimedia/pokemon/pidgeotto-1.webp"
@@ -132,7 +153,8 @@
         </li>
         <li>
           <article>
-            <a href="">
+            <a href="./pages/shop.html"
+              >NUEVO
               <picture>
                 <img
                   src="./img/multimedia/harry-potter/luna-1.webp"
@@ -151,7 +173,23 @@
       </section>
     </main>
     <footer>
-      
+      <nav>
+        <picture>
+          <a href="./index.html">
+            <img
+              src="./img/multimedia/branding/logo_light_horizontal.svg"
+              alt="isologotipo de la marca Funkoshop"
+            />
+          </a>
+        </picture>
+        <ul>
+          <li><a href="./pages/shop.html">SHOP</a></li>
+          <li><a href="./pages/contacto.html">CONTACTO</a></li>
+          <li><a href="./pages/login.html">LOGIN</a></li>
+          <li></li>
+        </ul>
+        <p>All rights reserved 2023- Funkoshop&COPY;</p>
+      </nav>
     </footer>
   </body>
 </html>
