--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           />
         </picture>
       </section>
+
       <section class="collection container">
         <article class="collection__content">
           <h3 class="collection__title">POKEMON INDIGO</h3>
@@ -96,7 +97,7 @@
           />
         </picture>
       </section>
-      <section class="coleccion container">
+      <section class="collection container">
         <article class="collection__content">
           <h3 class="collection__title">HARRY POTTER</h3>
           <p class="collection__text">
@@ -111,85 +112,114 @@
           />
         </picture>
       </section>
-      <section>
-        <h2>ULTIMOS LANZAMIENTOS</h2>
-        <li>
-          <article>
-            <a href="./pages/shop.html"
-              >NUEVO
-              <picture>
-                <img
-                  src="./img/multimedia/star-wars/trooper-1.webp"
-                  alt="Figura coleccionable Funko de un StormTrooper"
-                />
-              </picture>
-              <div>
-                <p>STAR WARS</p>
-                <h4>STORMTROOPER LIGHT SABER</h4>
-                <p>$1799.99</p>
-                <p>3 CUOTAS SIN INTERES</p>
-              </div>
-            </a>
-          </article>
-        </li>
-        <li>
-          <article>
-            <a href="./pages/shop.html"
-              >NUEVO
-              <picture>
-                <img
-                  src="./img/multimedia/pokemon/pidgeotto-1.webp"
-                  alt="Figura coleccionable Funko de un Pidgeotto"
-                />
-              </picture>
-              <div>
-                <p>POKEMON</p>
-                <h4>PIDGEOTTO</h4>
-                <p>$1799.99</p>
-                <p>3 CUOTAS SIN INTERES</p>
-              </div>
-            </a>
-          </article>
-        </li>
-        <li>
-          <article>
-            <a href="./pages/shop.html"
-              >NUEVO
-              <picture>
-                <img
-                  src="./img/multimedia/harry-potter/luna-1.webp"
-                  alt="Figura coleccionable Funko de un Luna Lovegood"
-                />
-              </picture>
-              <div>
-                <p>HARRY POTTER</p>
-                <h4>LUNA LOVEGOOD LION MASK</h4>
-                <p>$1799.99</p>
-                <p>3 CUOTAS SIN INTERES</p>
-              </div>
-            </a>
-          </article>
-        </li>
+
+      <section class="slider container">
+        <h2 class="slider__title">ULTIMOS LANZAMIENTOS</h2>
+
+        <ul class="slider__items">
+          <li class="slider__item">
+            <article class="card-item">
+              <!-- a este ultimo no seguimos con Bem, pues es una especie de tarjeta que se repite en las distintas paginas -->
+              <a class="card-item__link" href="">
+                <picture class="card-item__cover">
+                  <span class="card-item__tag">NUEVO</span>
+                  <img
+                    class="card-item__img--front"
+                    src="./img/multimedia/star-wars/trooper-1.webp"
+                    alt="Figura coleccionable Funko de un StormTrooper"
+                  />
+                  <img
+                    class="card-item__img--back"
+                    src="./img/multimedia/star-wars/trooper-box.webp"
+                    alt="Figura coleccionable Funko de un StormTrooper en caja"
+                  />
+                </picture>
+                <div class="card-item__content">
+                  <p class="card-item__license">STAR WARS</p>
+                  <h4 class="card-item__name">STORMTROOPER LIGHT SABER</h4>
+                  <p class="card-item__price">$1799.99</p>
+                  <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
+                </div>
+              </a>
+            </article>
+          </li>
+
+          <li class="slider__item">
+            <article class="card-item">
+              <a class="card-item__link" href="">
+                <picture class="card-item__cover">
+                  <span class="card-item__tag">NUEVO</span>
+                  <img
+                    class="card-item__img--front"
+                    src="./img/multimedia/pokemon/pidgeotto-1.webp"
+                    alt="Figura coleccionable Funko de un Pidgeotto"
+                  />
+                  <img
+                    class="card-item__img--back"
+                    src="./img/multimedia/pokemon/pidgeotto-box.webp"
+                    alt="Figura coleccionable Funko de un Pidgeotto en caja"
+                  />
+                </picture>
+                <div class="card-item__content">
+                  <p class="card-item__license">POKEMON</p>
+                  <h4 class="card-item__name">PIDGEOTTO</h4>
+                  <p class="card-item__price">$1799.99</p>
+                  <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
+                </div>
+              </a>
+            </article>
+          </li>
+
+          <li class="slider__item">
+            <article class="card-item">
+              <a class="card-item__link" href="">
+                <picture class="card-item__cover">
+                  <span class="card-item__tag">NUEVO</span>
+                  <img
+                    class="card-item__img--front"
+                    src="./img/multimedia/harry-potter/luna-1.webp"
+                    alt="Figura coleccionable Funko de un Luna Lovegood"
+                  />
+                  <img
+                    class="card-item__img--back"
+                    src="./img/multimedia/harry-potter/luna-box.webp"
+                    alt="Figura coleccionable Funko de un Luna Lovegood en caja"
+                  />
+                </picture>
+                <div class="card-item__content">
+                  <p class="card-item__license">HARRY POTTER</p>
+                  <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                  <p class="card-item__price">$1799.99</p>
+                  <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
+                </div>
+              </a>
+            </article>
+          </li>
+        </ul>
       </section>
     </main>
-    <footer>
-      <nav>
-        <picture>
-          <a href="./index.html">
-            <img
-              src="./img/multimedia/branding/logo_light_horizontal.svg"
-              alt="isologotipo de la marca Funkoshop"
-            />
-          </a>
-        </picture>
-        <ul>
-          <li><a href="./pages/shop.html">SHOP</a></li>
-          <li><a href="./pages/contacto.html">CONTACTO</a></li>
-          <li><a href="./pages/login.html">LOGIN</a></li>
-          <li></li>
+
+    <footer class="footer">
+      <nav class="nabvar container">
+        <ul class="nabvar__item">
+          <li class="nabvar__items">
+            <a class="nabvar__link" href="./pages/shop/shop.html">SHOP</a>
+          </li>
+          <li class="nabvar__items">
+            <a class="nabvar__link" href="./pages/register.html">REGISTRARSE</a>
+          </li>
+          <li class="nabvar__items">
+            <a class="nabvar__link" href="./pages/admin/login.html">LOGIN</a>
+          </li>
+          <li class="nabvar__items">
+            <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
+          </li>
         </ul>
-        <p>All rights reserved 2023- Funkoshop&COPY;</p>
+        <picture>
+          <img src="./img/multimedia/branding/isotype.svg" alt="Isotipo logo tienda Funkoshop">
+        </picture>
       </nav>
+      <p class="footer__copy">All rights reserved 2023- Funkoshop&COPY;</p>
     </footer>
   </body>
 </html>
