--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </picture>
         <ul class="nabvar__menu">
           <li class="nabvar__item">
-            <a class="nabvar__link" href="./pages/shop.html">SHOP</a>
+            <a class="nabvar__link" href="./pages/shop/shop.html">SHOP</a>
           </li>
           <ul class="submenu">
             <li class="submenu__item">
@@ -43,7 +43,7 @@
             <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
           </li>
           <li class="nabvar__item">
-            <a class="nabvar__link" href="./pages/login.html">LOGIN</a>
+            <a class="nabvar__link" href="./pages/admin/login.html">LOGIN</a>
           </li>
           <li class="nabvar__item">
             <a class="nabvar__cart" href="./pages/carrito.html"
@@ -55,7 +55,7 @@
         </ul>
       </nav>
     </header>
-
+    <!-- seccion correspondiente al banner -->
     <section class="hero">
       <article class="hero__content container">
         <h3 class="hero__title">Nuevos Ingresos</h3>
@@ -64,6 +64,7 @@
         <!-- con css agregamos la imagen de fondo -->
       </article>
     </section>
+    <!-- seccion de las tres colecciones -->
     <main class="main-container">
       <section class="collection container">
         <article class="collection__content">
@@ -112,13 +113,13 @@
           />
         </picture>
       </section>
-
+      <!-- seccion correspondiente al slider -->
       <section class="slider container">
         <h2 class="slider__title">ULTIMOS LANZAMIENTOS</h2>
 
         <ul class="slider__items">
           <li class="slider__item">
-            <article class="card-item">
+            <article class="card-item container">
               <!-- a este ultimo no seguimos con Bem, pues es una especie de tarjeta que se repite en las distintas paginas -->
               <a class="card-item__link" href="">
                 <picture class="card-item__cover">
@@ -216,7 +217,10 @@
           </li>
         </ul>
         <picture>
-          <img src="./img/multimedia/branding/isotype.svg" alt="Isotipo logo tienda Funkoshop">
+          <img
+            src="./img/multimedia/branding/isotype.svg"
+            alt="Isotipo logo tienda Funkoshop"
+          />
         </picture>
       </nav>
       <p class="footer__copy">All rights reserved 2023- Funkoshop&COPY;</p>
