--- a/index.html
+++ b/index.html
@@ -3,18 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Somos alumnos de Codo a Codo, del curso Node JS-JavaScript, comision 23051, con el profesor Sr Alberto Gabriel Feldman"
+    />
+    <meta
+      name="keywords"
+      content="Tienda Funkoshop, articulos de las sagas Star Wars, Pockemon, Harry Potter. Funkos, Remeras, Llaveros"
+    />
     <title>Home Funkoshop</title>
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
-    /> -->
+    />
+  <!-- Estos dos enlaces son para poder trabajar ocn glidjs, sin usar express, para poder hacer el carussell -->
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="./estilos/style.css" />
   </head>
   <body>
+    <!-- header -->
     <header>
       <nav class="nabvar container">
+        <!-- a la clase le agregamos container porque definimos que container no supere el ancho de 1200PX -->
         <!-- usamos la terminologia BEM,block element modifier, a los hijos le damos el nombre del padre modificado -->
         <picture class="nabvar__logo">
           <a href="./index.html">
@@ -25,20 +38,26 @@
           </a>
         </picture>
         <ul class="nabvar__menu">
-          <li class="nabvar__item">
-            <a class="nabvar__link" href="./pages/shop/shop.html">SHOP</a>
+          <li class="nabvar__item with-submenu">
+            <!-- le agregamos la clase with submenu para que funcione el desplegable -->
+            <a class="nabvar__link with-icon" href=""
+              >SHOP <iconify-icon icon="bi:chevron-down"></iconify-icon
+            ></a>
+            <!-- El chevron lo bajamos de la libreria iconify, y agregamos el script para que funcione -->
+            <!-- agregamos la clase with-icon que nos sirve de ayuda para posicionar lo que tiene el enlace -->
+            <ul class="submenu">
+              <li class="submenu__item">
+                <a class="submenu__link" href="">FUNKOS</a>
+              </li>
+              <li class="submenu__item">
+                <a class="submenu__link" href="">REMERAS</a>
+              </li>
+              <li class="submenu__item">
+                <a class="submenu__link" href="">LLAVEROS</a>
+              </li>
+            </ul>
           </li>
-          <ul class="submenu">
-            <li class="submenu__item">
-              <a class="submenu__link">FUNKOS</a>
-            </li>
-            <li class="submenu__item">
-              <a class="submenu__link">REMERAS</a>
-            </li>
-            <li class="submenu__item">
-              <a class="submenu__link" href="">LLAVEROS</a>
-            </li>
-          </ul>
+
           <li class="nabvar__item">
             <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
           </li>
@@ -55,6 +74,7 @@
         </ul>
       </nav>
     </header>
+
     <!-- seccion correspondiente al banner -->
     <section class="hero">
       <article class="hero__content container">
@@ -64,6 +84,7 @@
         <!-- con css agregamos la imagen de fondo -->
       </article>
     </section>
+
     <!-- seccion de las tres colecciones -->
     <main class="main-container">
       <section class="collection container">
@@ -83,6 +104,12 @@
       </section>
 
       <section class="collection container">
+        <picture class="collection__cover">
+          <img
+            src="./img/multimedia/pokemon/vulpix-1.webp"
+            alt="Figura coleccionable de la serie Pokemon"
+          />
+        </picture>
         <article class="collection__content">
           <h3 class="collection__title">POKEMON INDIGO</h3>
           <p class="collection__text">
@@ -91,12 +118,6 @@
           </p>
           <a class="collection__link" href="./pages/shop.html">VER COLECCION</a>
         </article>
-        <picture class="collection__cover">
-          <img
-            src="./img/multimedia/pokemon/vulpix-1.webp"
-            alt="Figura coleccionable de la serie Pokemon"
-          />
-        </picture>
       </section>
       <section class="collection container">
         <article class="collection__content">
@@ -224,6 +245,11 @@
         </picture>
       </nav>
       <p class="footer__copy">All rights reserved 2023- Funkoshop&COPY;</p>
+      <p class="footer__copy">Curso Codo a Codo- Comision 23051</p>
     </footer>
+    <!-- Este script es para iconnify, donde bajaremos los chevrones del header -->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+    <!-- Este script es para la libreria glidejs, para el carussell -->
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
   </body>
 </html>
