--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-  <!-- Estos dos enlaces son para poder trabajar ocn glidjs, sin usar express, para poder hacer el carussell -->
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+    <!-- Estos dos enlaces son para poder trabajar ocn glidjs, sin usar express, para poder hacer el carussell -->
+    <link
+      rel="stylesheet"
+      href="http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css"
+    />
+
     <link rel="stylesheet" href="./estilos/style.css" />
   </head>
   <body>
@@ -135,89 +142,102 @@
         </picture>
       </section>
       <!-- seccion correspondiente al slider -->
-      <section class="slider container">
+      <!-- agregamos la clase glide para poder usar la libreria -->
+      <!-- la clase container es para limitar el ancho maximo a 1200px -->
+      <section class="slider container glide">
         <h2 class="slider__title">ULTIMOS LANZAMIENTOS</h2>
+        <!-- En la docu de la libreria nos pide agregar un nuevo div con la clase que se indica -->
+        <div class="glide__track" data-glide-el="track">
+          <ul class="slider__items glide__slides">
+            <li class="slider__item glide__slide">
+              <article class="card-item">
+                <!-- a este ultimo no seguimos con Bem, pues es una especie de tarjeta que se repite en las distintas paginas -->
+                <a class="card-item__link" href="">
+                  <picture class="card-item__cover">
+                    <span class="card-item__tag">NUEVO</span>
+                    <img
+                      class="card-item__img--front"
+                      src="./img/multimedia/star-wars/trooper-1.webp"
+                      alt="Figura coleccionable Funko de un StormTrooper"
+                    />
+                    <img
+                      class="card-item__img--back"
+                      src="./img/multimedia/star-wars/trooper-box.webp"
+                      alt="Figura coleccionable Funko de un StormTrooper en caja"
+                    />
+                  </picture>
+                  <div class="card-item__content">
+                    <p class="card-item__license">STAR WARS</p>
+                    <h4 class="card-item__name">STORMTROOPER LIGHT SABER</h4>
+                    <p class="card-item__price">$1799.99</p>
+                    <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
+                  </div>
+                </a>
+              </article>
+            </li>
 
-        <ul class="slider__items">
-          <li class="slider__item">
-            <article class="card-item container">
-              <!-- a este ultimo no seguimos con Bem, pues es una especie de tarjeta que se repite en las distintas paginas -->
-              <a class="card-item__link" href="">
-                <picture class="card-item__cover">
-                  <span class="card-item__tag">NUEVO</span>
-                  <img
-                    class="card-item__img--front"
-                    src="./img/multimedia/star-wars/trooper-1.webp"
-                    alt="Figura coleccionable Funko de un StormTrooper"
-                  />
-                  <img
-                    class="card-item__img--back"
-                    src="./img/multimedia/star-wars/trooper-box.webp"
-                    alt="Figura coleccionable Funko de un StormTrooper en caja"
-                  />
-                </picture>
-                <div class="card-item__content">
-                  <p class="card-item__license">STAR WARS</p>
-                  <h4 class="card-item__name">STORMTROOPER LIGHT SABER</h4>
-                  <p class="card-item__price">$1799.99</p>
-                  <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
-                </div>
-              </a>
-            </article>
-          </li>
+            <li class="slider__item glide__slide">
+              <article class="card-item">
+                <a class="card-item__link" href="">
+                  <picture class="card-item__cover">
+                    <span class="card-item__tag">NUEVO</span>
+                    <img
+                      class="card-item__img--front"
+                      src="./img/multimedia/pokemon/pidgeotto-1.webp"
+                      alt="Figura coleccionable Funko de un Pidgeotto"
+                    />
+                    <img
+                      class="card-item__img--back"
+                      src="./img/multimedia/pokemon/pidgeotto-box.webp"
+                      alt="Figura coleccionable Funko de un Pidgeotto en caja"
+                    />
+                  </picture>
+                  <div class="card-item__content">
+                    <p class="card-item__license">POKEMON</p>
+                    <h4 class="card-item__name">PIDGEOTTO</h4>
+                    <p class="card-item__price">$1799.99</p>
+                    <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
+                  </div>
+                </a>
+              </article>
+            </li>
 
-          <li class="slider__item">
-            <article class="card-item">
-              <a class="card-item__link" href="">
-                <picture class="card-item__cover">
-                  <span class="card-item__tag">NUEVO</span>
-                  <img
-                    class="card-item__img--front"
-                    src="./img/multimedia/pokemon/pidgeotto-1.webp"
-                    alt="Figura coleccionable Funko de un Pidgeotto"
-                  />
-                  <img
-                    class="card-item__img--back"
-                    src="./img/multimedia/pokemon/pidgeotto-box.webp"
-                    alt="Figura coleccionable Funko de un Pidgeotto en caja"
-                  />
-                </picture>
-                <div class="card-item__content">
-                  <p class="card-item__license">POKEMON</p>
-                  <h4 class="card-item__name">PIDGEOTTO</h4>
-                  <p class="card-item__price">$1799.99</p>
-                  <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
-                </div>
-              </a>
-            </article>
-          </li>
-
-          <li class="slider__item">
-            <article class="card-item">
-              <a class="card-item__link" href="">
-                <picture class="card-item__cover">
-                  <span class="card-item__tag">NUEVO</span>
-                  <img
-                    class="card-item__img--front"
-                    src="./img/multimedia/harry-potter/luna-1.webp"
-                    alt="Figura coleccionable Funko de un Luna Lovegood"
-                  />
-                  <img
-                    class="card-item__img--back"
-                    src="./img/multimedia/harry-potter/luna-box.webp"
-                    alt="Figura coleccionable Funko de un Luna Lovegood en caja"
-                  />
-                </picture>
-                <div class="card-item__content">
-                  <p class="card-item__license">HARRY POTTER</p>
-                  <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
-                  <p class="card-item__price">$1799.99</p>
-                  <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
-                </div>
-              </a>
-            </article>
-          </li>
-        </ul>
+            <li class="slider__item glide__slide">
+              <article class="card-item">
+                <a class="card-item__link" href="">
+                  <picture class="card-item__cover">
+                    <span class="card-item__tag">NUEVO</span>
+                    <img
+                      class="card-item__img--front"
+                      src="./img/multimedia/harry-potter/luna-1.webp"
+                      alt="Figura coleccionable Funko de un Luna Lovegood"
+                    />
+                    <img
+                      class="card-item__img--back"
+                      src="./img/multimedia/harry-potter/luna-box.webp"
+                      alt="Figura coleccionable Funko de un Luna Lovegood en caja"
+                    />
+                  </picture>
+                  <div class="card-item__content">
+                    <p class="card-item__license">HARRY POTTER</p>
+                    <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                    <p class="card-item__price">$1799.99</p>
+                    <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
+                  </div>
+                </a>
+              </article>
+            </li>
+          </ul>
+        </div>
+        <!-- Pegamos de la libreria de glide en el set-up el siguiente div para los botones del slider -->
+        <div data-glide-el="controls">
+          <button class="glide__arrow glide__arrow--left" data-glide-dir=">">
+            <iconify-icon icon="tabler:chevron-left"></iconify-icon>
+          </button>
+          <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+            <iconify-icon icon="tabler:chevron-right"></iconify-icon>
+          </button>
+        </div>
       </section>
     </main>
 
@@ -251,5 +271,22 @@
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <!-- Este script es para la libreria glidejs, para el carussell -->
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <!-- hay que agregar este nuevo script para que funcione glide: -->
+    <script>
+      new Glide(".glide", {
+        type: "carousel",
+        startAt: 0,
+        perView: 3,
+        gap: 30,
+        breakpoint: {
+          991: {
+            perView: 2,
+          },
+          768: {
+            perview: 1,
+          },
+        },
+      }).mount();
+    </script>
   </body>
 </html>
