se completo estilos y funcionalidad del item

--- a/item.html
+++ b/item.html
@@ -10,15 +10,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <!-- Estos dos enlaces son para poder trabajar ocn glidejs, sin usar express, para poder hacer el carussell -->
-    <link
-      rel="stylesheet"
-      href="http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css"
-    />
+    <!-- Estos dos enlaces son para poder trabajar ocn glidejs, sin usar express, para poder hacer el carussell, los pasamos al css y vienen con import -->
 
     <link rel="stylesheet" href="./estilos/style.css" />
   </head>
@@ -99,13 +91,18 @@
           <p class="item__info--price">$ 1.799,99.-</p>
 
           <div class="item__cart">
-            <button class="item__quantity" type="button">-</button>
-            <input class="item__input" type="text" />
-            <button class="item__quantity" type="button">+</button>
-            <button
-              class="item__agregate btn btn--primary btn--medium"
-              type="submit"
-            >
+            <button id="subtract" class="item__quantity" type="button">
+              -
+            </button>
+            <input
+              class="item__input"
+              type="text"
+              placeholder="0"
+              name="quantity"
+              id="quantity"
+            />
+            <button id="add" class="item__quantity" type="button">+</button>
+            <button class="item__agregate" type="submit">
               Agregar al carrito
             </button>
           </div>
@@ -236,7 +233,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.4.1/dist/glide.min.js"></script>
-
+    <script src="./js/item.js"></script>
     <!-- hay que agregar este nuevo script para que funcione glide: -->
     <script src="../js/glide.js"></script>
   </body>
