--- a/index.html
+++ b/index.html
@@ -18,15 +18,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <!-- Estos dos enlaces son para poder trabajar ocn glidjs, sin usar express, para poder hacer el carussell -->
-    <link
-      rel="stylesheet"
-      href="http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css"
-    />
 
     <link rel="stylesheet" href="./estilos/style.css" />
   </head>
@@ -250,7 +241,7 @@
           <li class="nabvar__items">
             <a class="nabvar__link" href="./pages/register.html">REGISTRARSE</a>
           </li>
-          
+
           <li class="nabvar__items">
             <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
           </li>
@@ -270,8 +261,6 @@
     <!-- Este script es para la libreria glidejs, para el carussell -->
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <!-- hay que agregar este nuevo script para que funcione glide: -->
-    <script src="./js/glide.js">
-     
-    </script>
+    <script src="./js/glide.js"></script>
   </body>
 </html>
