routes and controllers, inicio

--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -12,7 +12,7 @@
     />
     <!-- Estos dos enlaces son para poder trabajar ocn glidejs, sin usar express, para poder hacer el carussell, los pasamos al css y vienen con import -->
 
-    <link rel="stylesheet" href="./estilos/style.css" />
+    <link rel="stylesheet" href="../../estilos/style.css" />
   </head>
   <body>
     <!-- header -->
@@ -23,7 +23,7 @@
         <picture class="nabvar__logo">
           <a href="./index.html">
             <img
-              src="./img/multimedia/branding/logo_light_horizontal.svg"
+              src="../../img/multimedia/branding/logo_light_horizontal.svg"
               alt="isologotipo de la marca Funkoshop"
             />
           </a>
@@ -58,7 +58,7 @@
           <li class="nabvar__item">
             <a class="nabvar__cart" href="./pages/carrito.html"
               ><img
-                src="./img/multimedia/icons/cart-icon.svg"
+                src="../../img/multimedia/icons/cart-icon.svg"
                 alt="logo del carrito"
             /></a>
           </li>
@@ -72,12 +72,12 @@
         <picture class="item__card">
           <img
             class="item__card-front"
-            src="../img/multimedia/star-wars/baby-yoda-1.webp"
+            src="../../img/multimedia/star-wars/baby-yoda-1.webp"
             alt="Figura coleccionable de la serie The Mandolarian"
           />
           <img
             class="item__card-back"
-            src="../img/multimedia/star-wars/baby-yoda-box.webp"
+            src="../../img/multimedia/star-wars/baby-yoda-box.webp"
             alt="Figura coleccionable de la serie The Mandolarian"
           />
         </picture>
@@ -124,12 +124,12 @@
                     <span class="card-item__tag">NUEVO</span>
                     <img
                       class="card-item__img--front"
-                      src="./img/multimedia/star-wars/trooper-1.webp"
+                      src="../../img/multimedia/star-wars/trooper-1.webp"
                       alt="Figura coleccionable Funko de un StormTrooper"
                     />
                     <img
                       class="card-item__img--back"
-                      src="./img/multimedia/star-wars/trooper-box.webp"
+                      src="../../img/multimedia/star-wars/trooper-box.webp"
                       alt="Figura coleccionable Funko de un StormTrooper en caja"
                     />
                   </picture>
@@ -150,12 +150,12 @@
                     <span class="card-item__tag">NUEVO</span>
                     <img
                       class="card-item__img--front"
-                      src="./img/multimedia/pokemon/pidgeotto-1.webp"
+                      src="../../img/multimedia/pokemon/pidgeotto-1.webp"
                       alt="Figura coleccionable Funko de un Pidgeotto"
                     />
                     <img
                       class="card-item__img--back"
-                      src="./img/multimedia/pokemon/pidgeotto-box.webp"
+                      src="../../img/multimedia/pokemon/pidgeotto-box.webp"
                       alt="Figura coleccionable Funko de un Pidgeotto en caja"
                     />
                   </picture>
@@ -176,12 +176,12 @@
                     <span class="card-item__tag">NUEVO</span>
                     <img
                       class="card-item__img--front"
-                      src="./img/multimedia/harry-potter/luna-1.webp"
+                      src="../../img/multimedia/harry-potter/luna-1.webp"
                       alt="Figura coleccionable Funko de un Luna Lovegood"
                     />
                     <img
                       class="card-item__img--back"
-                      src="./img/multimedia/harry-potter/luna-box.webp"
+                      src="../../img/multimedia/harry-potter/luna-box.webp"
                       alt="Figura coleccionable Funko de un Luna Lovegood en caja"
                     />
                   </picture>
@@ -223,7 +223,7 @@
         </ul>
         <picture>
           <img
-            src="../img/multimedia/branding/isotype.svg"
+            src="../../img/multimedia/branding/isotype.svg"
             alt="Isotipo logo tienda Funkoshop"
           />
         </picture>
@@ -233,8 +233,8 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.4.1/dist/glide.min.js"></script>
-    <script src="./js/item.js"></script>
+    <script src="../../js/item.js"></script>
     <!-- hay que agregar este nuevo script para que funcione glide: -->
-    <script src="../js/glide.js"></script>
+    <script src="../../js/glide.js"></script>
   </body>
 </html>
