se corrigieron rutas en el inicio.html

--- a/public/inicio.html
+++ b/public/inicio.html
@@ -28,7 +28,7 @@
         <!-- a la clase le agregamos container porque definimos que container no supere el ancho de 1200PX -->
         <!-- usamos la terminologia BEM,block element modifier, a los hijos le damos el nombre del padre modificado -->
         <picture class="nabvar__logo">
-          <a href="./index.html">
+          <a href="../public/pages/shop/shop.html">
             <img
               src="./img/multimedia/branding/logo_light_horizontal.svg"
               alt="isologotipo de la marca Funkoshop"
@@ -78,7 +78,7 @@
       <article class="hero__content container">
         <h3 class="hero__title">Nuevos Ingresos</h3>
         <p class="hero__text">Descubri el proximo Funko Pop de tu coleccion</p>
-        <a class="hero__link" href="./pages/shop.html">SHOP</a>
+        <a class="hero__link" href="../public/pages/shop/shop.html">SHOP</a>
         <!-- con css agregamos la imagen de fondo -->
       </article>
     </section>
@@ -114,7 +114,7 @@
             Atrapa a todos los que puedas y disfruta de una coleccion llena de
             amigos
           </p>
-          <a class="collection__link" href="./pages/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="../public/pages/shop/shop.html">VER COLECCION</a>
         </article>
       </section>
       <section class="collection container">
@@ -123,7 +123,7 @@
           <p class="collection__text">
             Revive los recuerdos de una saga llena de magia y encanto
           </p>
-          <a class="collection__link" href="./pages/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="../public/pages/shop/shop.html">VER COLECCION</a>
         </article>
         <picture class="collection__cover">
           <img
