cambios en rutas

--- a/public/pages/admin/adminListadoProductos (1).html
+++ b/public/pages/admin/adminListadoProductos (1).html
@@ -58,7 +58,7 @@
             <h1 class="title-list__text">LISTADO DE PRODUCTOS</h1>
             <div class="title-list__add-container">
                 <span class="title-list__add-text ">AGREGAR</span>
-                <a href="#" class="title-list__buttom-link">
+                <a href="../admin/editar-item.html" class="title-list__buttom-link">
                     <i class="fa-solid fa-plus bottom-decrease-increase title-list__add-bottom "></i>
                 </a>
             </div>
