--- a/public/pages/admin/editar-item.html
+++ b/public/pages/admin/editar-item.html
@@ -20,7 +20,7 @@
         
             <ul class="navbar__list">
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link">VER TIENDA</a>
+                    <a href="../../inicio.html" class="navbar__link">VER TIENDA</a>
                 </li>
                 <li class="navbar__item">
                     <a href="../admin/login.html" class="navbar__link">ADMIN</a>
