--- a/public/pages/shop/carrito.html
+++ b/public/pages/shop/carrito.html
@@ -203,6 +203,6 @@
     </footer>
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <script src="../../js-fede/Carrito (1).js"></script>
-    <script src="../../js-fede/FuncionAgregarItemCarrito.js"></script> -->
+    <script src="../../js-fede/FuncionAgregarItemCarrito.js"></script> 
 </body>
 </html>
