--- a/public/pages/shop/shop.html
+++ b/public/pages/shop/shop.html
@@ -146,7 +146,7 @@
                     <nav class="nabvar container2">
                         <ul class="nabvar__item">
                             <li class="nabvar__items">
-                                <a class="nabvar__link" href="./pages/shop/shop.html">SHOP</a>
+                                <a class="nabvar__link" href="../shop/shop.html">SHOP</a>
                             </li>
                             <li class="nabvar__items">
                                 <a class="nabvar__link" href="..//admin/register.html">REGISTRARSE</a>
