se agrego contacto.html vacia

--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -21,7 +21,7 @@
         <!-- a la clase le agregamos container porque definimos que container no supere el ancho de 1200PX -->
         <!-- usamos la terminologia BEM,block element modifier, a los hijos le damos el nombre del padre modificado -->
         <picture class="nabvar__logo">
-          <a href="./index.html">
+          <a href="../../inicio.html">
             <img
               src="../../img/multimedia/branding/logo_light_horizontal.svg"
               alt="isologotipo de la marca Funkoshop"
@@ -50,13 +50,13 @@
           </li>
 
           <li class="nabvar__item">
-            <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
+            <a class="nabvar__link" href="contacto.html">CONTACTO</a>
           </li>
           <li class="nabvar__item">
-            <a class="nabvar__link" href="./pages/admin/login.html">LOGIN</a>
+            <a class="nabvar__link" href="../admin/login.html">LOGIN</a>
           </li>
           <li class="nabvar__item">
-            <a class="nabvar__cart" href="./pages/carrito.html"
+            <a class="nabvar__cart" href="carrito.html"
               ><img
                 src="../../img/multimedia/icons/cart-icon.svg"
                 alt="logo del carrito"
@@ -211,14 +211,14 @@
       <nav class="nabvar container">
         <ul class="nabvar__item">
           <li class="nabvar__items">
-            <a class="nabvar__link" href="./pages/shop/shop.html">SHOP</a>
+            <a class="nabvar__link" href="shop.html">SHOP</a>
           </li>
           <li class="nabvar__items">
-            <a class="nabvar__link" href="./pages/register.html">REGISTRARSE</a>
+            <a class="nabvar__link" href="../admin/register.html">REGISTRARSE</a>
           </li>
 
           <li class="nabvar__items">
-            <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
+            <a class="nabvar__link" href="contacto.html">CONTACTO</a>
           </li>
         </ul>
         <picture>
