--- a/public/pages/admin/adminListadoProductos (1).html
+++ b/public/pages/admin/adminListadoProductos (1).html
@@ -33,7 +33,7 @@
                     </ul>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link">CONTACTO</a>
+                    <a href="../shop/contacto.html" class="navbar__link">CONTACTO</a>
                 </li>
                 <li class="navbar__item">
                     <a href="../admin/login.html" class="navbar__link">LOGIN</a>
