se corrigio ruta en el shop

--- a/public/pages/shop/shop.html
+++ b/public/pages/shop/shop.html
@@ -149,7 +149,7 @@
                                 <a class="nabvar__link" href="../shop/shop.html">SHOP</a>
                             </li>
                             <li class="nabvar__items">
-                                <a class="nabvar__link" href="..//admin/register.html">REGISTRARSE</a>
+                                <a class="nabvar__link" href="../admin/register.html">REGISTRARSE</a>
                             </li>
                             <li class="nabvar__items">
                                 <a class="nabvar__link" href="../admin/login.html">LOGIN</a>
