--- a/public/pages/shop/carrito.html
+++ b/public/pages/shop/carrito.html
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link">CONTACTO</a>
+                    <a href="contacto.html" class="navbar__link">CONTACTO</a>
                 </li>
                 <li class="navbar__item">
                     <a href="../admin/login.html" class="navbar__link">LOGIN</a>
