modifico y agrego cosas del CARRITO e ITEM

--- a/public/pages/shop/carrito.html
+++ b/public/pages/shop/carrito.html
@@ -21,7 +21,7 @@
                     <a href="#" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
                     <ul class="submenu">
                         <li class="submenu__item">
-                            <a href="../../inicio.html" class="submenu__link">FUNKOS</a>
+                            <a href="../pages/index.html" class="submenu__link">FUNKOS</a>
                         </li>
                         <li class="submenu__item">
                             <a href="#" class="submenu__link">LLAVEROS</a>
@@ -32,14 +32,15 @@
                     </ul>
                 </li>
                 <li class="navbar__item">
-                    <a href="contacto.html" class="navbar__link">CONTACTO</a>
+                    <a href="#" class="navbar__link">CONTACTO</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../admin/login.html" class="navbar__link">LOGIN</a>
+                    <a href="../pages/Login.html" class="navbar__link">LOGIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../shop/Carrito.html" class="navbar__link">
+                    <a href="../pages/Carrito.html" class="navbar__link">
                         <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="navbar__item-cart">0</span>
                     </a>
                 </li>
             </ul>
@@ -61,7 +62,7 @@
 
             <section class="cart__items">
 
-                <article class="cart__item position container-shadow">
+                <!-- <article class="cart__item position container-shadow">
                     <div class="cart__product">
                         <picture class="cart__product-img">
                             <img src="../../img/multimedia/star-wars/baby-yoda-1.webp" alt="item-image" class="cart__img">
@@ -131,7 +132,7 @@
                         <i class="fa-solid fa-trash "></i>
                     </div>
 
-                </article>
+                </article> -->
                 
             </section>
             
@@ -202,7 +203,7 @@
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
-    <script src="../../js-fede/Carrito (1).js"></script>
-    <script src="../../js-fede/FuncionAgregarItemCarrito.js"></script> 
+    <script src="../../js-fede/carritoFunctions.js"></script>
+    <script src="../../js-fede/Carrito.js"></script>
 </body>
 </html>
