arreglo rutas del navbar

--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -29,7 +29,7 @@
                 <a href="#" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
                 <ul class="submenu">
                     <li class="submenu__item">
-                        <a href="../pages/index.html" class="submenu__link">FUNKOS</a>
+                        <a href="..//shop/shop.html" class="submenu__link">FUNKOS</a>
                     </li>
                     <li class="submenu__item">
                         <a href="#" class="submenu__link">LLAVEROS</a>
@@ -43,10 +43,10 @@
                 <a href="#" class="navbar__link">CONTACTO</a>
             </li>
             <li class="navbar__item">
-                <a href="../pages/Login.html" class="navbar__link">LOGIN</a>
+                <a href="../admin/login.html" class="navbar__link">LOGIN</a>
             </li>
             <li class="navbar__item">
-                <a href="../pages/Carrito.html" class="navbar__link">
+                <a href="../shop/carrito.html" class="navbar__link">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span class="navbar__item-cart">0</span>
                 </a>
