--- a/public/pages/shop/carrito.html
+++ b/public/pages/shop/carrito.html
@@ -21,7 +21,7 @@
                     <a href="#" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
                     <ul class="submenu">
                         <li class="submenu__item">
-                            <a href="../pages/index.html" class="submenu__link">FUNKOS</a>
+                            <a href="#" class="submenu__link">FUNKOS</a>
                         </li>
                         <li class="submenu__item">
                             <a href="#" class="submenu__link">LLAVEROS</a>
@@ -32,10 +32,10 @@
                     </ul>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__link">CONTACTO</a>
+                    <a href="contacto.html" class="navbar__link">CONTACTO</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../pages/Login.html" class="navbar__link">LOGIN</a>
+                    <a href="../admin/login.html" class="navbar__link">LOGIN</a>
                 </li>
                 <li class="navbar__item">
                     <a href="../pages/Carrito.html" class="navbar__link">
