--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -40,7 +40,7 @@
                 </ul>
             </li>
             <li class="navbar__item">
-                <a href="#" class="navbar__link">CONTACTO</a>
+                <a href="contacto.html" class="navbar__link">CONTACTO</a>
             </li>
             <li class="navbar__item">
                 <a href="../admin/login.html" class="navbar__link">LOGIN</a>
@@ -181,7 +181,7 @@
         </div>
         <!-- Pegamos de la libreria de glide en el set-up el siguiente div para los botones del slider -->
         <div data-glide-el="controls">
-          <button class="glide__arrow glide__arrow--left" data-glide-dir=">">
+          <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
             <iconify-icon icon="tabler:chevron-left"></iconify-icon>
           </button>
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
